--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Relógio digital simples com horas, minutos e segundos. Ideal para decoração com monitores pequenos.">
+    <meta name="keywords" content="relógio, digital, horas, minutos, segundos">
+    <meta name="author" content="Lucas Alan Costa Novais">
 </head>
 <body>
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand" id="hor">hora</div>
-            <p>:</p>
+            <div>
+                <p></p>
+                <p></p>  
+            </div>
+            
             <div class="hand minute-hand" id="min">minuto</div>
-            <p>:</p>
+            <div>
+                <p></p>
+                <p></p>
+            </div>
             <div class="hand second-hand" id="sec">segundo</div>
         </div>
     </div>
