--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio</title>
-    <link rel="stylesheet" href="css/style.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Relógio digital simples com horas, minutos e segundos. Ideal para decoração com monitores pequenos.">
     <meta name="keywords" content="relógio, digital, horas, minutos, segundos">
     <meta name="author" content="Lucas Alan Costa Novais">
